[tool.poetry]
name = "cliar"
version = "1.2.3"
description = "Create CLIs with classes and type hints."
license = "MIT"
authors = ["Konstantin Molchanov <moigagoo@live.com>"]
readme = "README.md"
homepage = "https://moigagoo.github.io/cliar/"
repository = "https://github.com/moigagoo/cliar/"
documentation = "https://moigagoo.github.io/cliar/"
keywords = ["cli", "commandline"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pylint = "^2.1"
pytest-cov = "^2.5"
rope = "^0.10.7"
codecov = "^2.0"
pygments = "^2.2"
pytest-datadir = "^1.0"
foliant = "^1.0"
"foliantcontrib.mkdocs" = "^1.0.5"
"foliantcontrib.includes" = "^1.0"
mkdocs-material = "^2.7"
"foliantcontrib.blockdiag" = "^1.0"
